--- a/src/locales/zh/htp.json
+++ b/src/locales/zh/htp.json
@@ -1,82 +1,82 @@
 {
     "introduction": {
-        "title": "INTRODUCTION",
-        "content": "Dragon Tiger Wild is the latest game from IDNLIVE Europe. If you are familiar with the Dragon Tiger game, you will find a new, exciting, and fun experience in playing this game. In this new game, we add new elements to the dragon tiger game with wild cards, and you will get much higher prizes in this game. Let's get wild!!!"
+        "title": "介绍",
+        "content": "Dragon Tiger Wild 是 IDNLIVE Europe 的最新游戏，如果你已经熟悉 Dragon Tiger，你将体验到一种新奇而有趣的游戏体验。在这款新游戏中，我们加入了 wild card 元素，让你获得更高的奖励。一起 wild 吧！！！"
     },
     "game-objective": {
-        "title": "Game Objective",
-        "content": "The goal in the Dragon Tiger Wild game is to guess the highest card and also think of the wild card correctly so that your prize is even more significant."
+        "title": "游戏目标",
+        "content": "Dragon Tiger Wild 的目标是猜中最高的卡牌，并正确猜中 wild card，从而获得更高的奖励。"
     },
     "rules": {
-        "title": "GENERAL RULES",
+        "title": "一般规则",
         "steps": [
-            "A Dealer or game guide will host this game.",
-            "This game uses eight sets of cards in one “Shoe”.",
-            "At the beginning of each new “Shoe,” the Dealer will issue one card that will determine how many cards will be “Burned” or discarded for that “Shoe.” Ace cards are worth 1, cards 2 to 10 are worth according to the card, and picture cards are worth 10, so each “Shoe” will discard ten cards at most.",
-            "Card values ​​in Dragon Tiger Wild",
+            "游戏由一位庄家主持。",
+            "游戏使用 8 副牌，放入一个 'Shoe' 中。",
+            "每当开始新的 'Shoe' 时，庄家会抽出一张牌，决定该 'Shoe' 中需要丢弃多少张牌。A 牌的点数为 1，2 到 10 牌的点数等于其面值，J、Q、K 的点数为 10。因此，每个 'Shoe' 最大丢弃 10 张牌。",
+            "Dragon Tiger Wild 中的卡牌点数如下：",
             "- Ace = 1",
-            "- 2 to 10 = according to card",
-            "- Jack, Queen, King = 11, 12. 13",
-            "When the betting time runs out, all bets will be accepted automatically.",
-            "The dealer will issue one card as a Wild Card, then give each card to the Dragon and Tiger sides.",
-            "The party with the highest score will be the winner. The highest score is K, which is worth 13.",
-            "If there is a tie, half of the bets on Dragon and Tiger will be returned. Tie bets win only when the Dragon and Tiger values ​​are the same."
+            "- 2 到 10 = 根据面值",
+            "- Jack, Queen, King = 11, 12, 13",
+            "当投注时间结束时，所有投注将自动被接受。",
+            "庄家会抽出一张 Wild 卡牌，然后分别发给龙和虎每人一张卡牌。",
+            "点数最高的一方将获胜，最高点数为 K（13）。",
+            "如果发生平局，则龙和虎的投注会退还一半。只有当龙和虎的卡牌点数相同，平局投注才算赢。"
         ]
     },
     "wild-card-bet": {
-        "title": "WILD CARD BET",
-        "description": "As the Introduction mentions, this game has new gameplay elements and exciting bonuses. Here's the explanation.",
-        "description-2": "Wild cards will determine victory, with a prize value greater than regular bets. There are five wild bets, which will be explained next.",
+        "title": "WILD 卡投注",
+        "description": "如前所述，本游戏引入了新的游戏元素和令人兴奋的奖金。以下是具体说明。",
+        "description-2": "Wild card 作为决定胜负的关键，奖励比普通投注更高。接下来我们会解释五种 wild 下注方式。",
         "dragon-wild": {
-            "title": "Dragon Wild",
-            "content": "This Dragon Wild bet is basically like betting on the Dragon bet, but if the Dragon side wins and the value of its card and the Wild card is the same, you will win."
+            "title": "龙 Wild",
+            "content": "龙 Wild 投注基本上与龙的投注相同，但如果龙获胜并且其点数与 Wild card 相同，你将赢得这项投注。"
         },
         "tiger-wild": {
-            "title": "Tiger Wild",
-            "content": "This Tiger Wild bet is basically like betting on the Tiger bet, but if the Tiger wins and the value of its card and the Wild card is the same, you will win."
+            "title": "虎 Wild",
+            "content": "虎 Wild 投注基本上与虎的投注相同，但如果虎获胜并且其点数与 Wild card 相同，你将赢得这项投注。"
         },
         "super-wild": {
             "title": "Super Wild",
-            "content": "This Super Wild bet is basically like betting on a Tie bet, but if the result is a Tie and the Wild card value matches the Dragon and Tiger card value, you will win."
+            "content": "Super Wild 投注基本上与平局投注相同，但如果结果是平局，并且 Wild card 的点数与龙和虎的点数匹配，你将赢得这项投注。"
         },
         "dragon-pair": {
-            "title": "Dragon Pair",
-            "content": "Dragon Pair bet is basically a regular Pair bet, so if the Dragon card value and the wild card value are the same, then you will win this bet."
+            "title": "龙对子",
+            "content": "龙对子投注基本上是普通对子投注，但如果龙的点数与 Wild card 相同，你将赢得这项投注。"
         },
         "tiger-pair": {
-            "title": "Tiger Pair",
-            "content": "Tiger Pair bet is basically a regular Pair bet, so if the Tiger card value and the wild card value are the same, then you will win this bet."
+            "title": "虎对子",
+            "content": "虎对子投注基本上是普通对子投注，但如果虎的点数与 Wild card 相同，你将赢得这项投注。"
         }
     },
     "side-bet": {
-        "title": "Side Bets",
-        "examples": "Example",
-        "description": "Deskripsi",
+        "title": "边注",
+        "examples": "示例",
+        "description": "描述",
         "table": {
             "dragon-wild": {
-                "title": "Dragon Wild",
-                "description": "Paid if the Dragon side wins, and also the value of the Dragon card and the Wild card are the same"
+                "title": "龙 Wild",
+                "description": "当龙获胜并且龙的卡牌点数与 Wild card 相同时，支付奖励。"
             },
             "tiger-wild": {
-                "title": "Tiger Wild",
-                "description": "Paid if the Tiger side wins, and also the value of the The Tiger card and the Wild card are the same"
+                "title": "虎 Wild",
+                "description": "当虎获胜并且虎的卡牌点数与 Wild card 相同时，支付奖励。"
             },
             "super-wild": {
                 "title": "Super Wild",
-                "description": "Paid if the value of Dragon, Tiger, and Wild cards are the same"
+                "description": "当龙、虎和 Wild card 的点数相同时，支付奖励。"
             },
             "dragon-pair": {
-                "title": "Dragon Pair",
-                "description": "Paid if the value of the Dragon Card and the Wild Card are the same"
+                "title": "龙对子",
+                "description": "当龙的卡牌点数与 Wild card 相同时，支付奖励。"
             },
             "tiger-pair": {
-                "title": "Tiger Pair",
-                "description": "Paid if the value of the Tiger Card and the Wild Card are the same"
+                "title": "虎对子",
+                "description": "当虎的卡牌点数与 Wild card 相同时，支付奖励。"
             }
         }
     },
     "payout": {
-        "title": "Payout",
-        "content": "Corresponds to what is in the Payments and Limits menu"
+        "title": "支付",
+        "content": "根据支付表和限制条款支付。"
     }
 }
