--- a/src/locales/th/htp.json
+++ b/src/locales/th/htp.json
@@ -48,6 +48,25 @@
             "content": "การเดิมพัน Pair เสือ คือการเดิมพันแบบคู่ปกติ แต่ถ้าค่าไพ่ของเสือและ Wild card ตรงกัน คุณจะชนะเดิมพันนี้"
         }
     },
+    "main-bet": {
+        "title": "เดิมพันหลัก",
+        "examples": "ตัวอย่าง",
+        "description": "คำอธิบาย",
+        "table": {
+            "dragon": {
+                "title": "มังกร",
+                "description": "จ่ายเมื่อค่าของมังกรสูงกว่าค่าของเสือ"
+            },
+            "tiger": {
+                "title": "เสือ",
+                "description": "จ่ายเมื่อค่าของเสือสูงกว่าค่าของมังกร"
+            },
+            "tie": {
+                "title": "เสมอ",
+                "description": "จ่ายเมื่อการ์ดของมังกรและเสือมีค่าเท่ากัน"
+            }
+        }
+    },
     "side-bet": {
         "title": "การเดิมพันข้างเคียง",
         "examples": "ตัวอย่าง",
