--- a/src/locales/en/htp.json
+++ b/src/locales/en/htp.json
@@ -48,49 +48,54 @@
             "content": "Tiger Pair bet is basically a regular Pair bet, so if the Tiger card value and the wild card value are the same, then you will win this bet."
         }
     },
-    "main-bet": {
-        "title": "MAIN BET",
-        "examples": "Examples",
+    "bet-description-and-example": {
+        "title": "Bet Description and Examples",
         "description": "Description",
-        "table": {
-            "dragon": {
-                "title": "Dragon",
-                "description": "Paid if the Dragon's value is higher than the Tiger's value."
-            },
-            "tiger": {
-                "title": "Tiger",
-                "description": "Paid if the Tiger's value is higher than the Dragon's value."
-            },
-            "tie": {
-                "title": "Tie",
-                "description": "Paid if the Dragon and Tiger cards have the same value."
+        "examples": "Examples",
+        "main-bet": {
+            "title": "MAIN BET",
+            "examples": "Examples",
+            "description": "Description",
+            "table": {
+                "dragon": {
+                    "title": "Dragon",
+                    "description": "Paid if the Dragon's value is higher than the Tiger's value."
+                },
+                "tiger": {
+                    "title": "Tiger",
+                    "description": "Paid if the Tiger's value is higher than the Dragon's value."
+                },
+                "tie": {
+                    "title": "Tie",
+                    "description": "Paid if the Dragon and Tiger cards have the same value."
+                }
             }
-        }
-    },
-    "side-bet": {
-        "title": "Side Bets",
-        "examples": "Example",
-        "description": "Deskripsi",
-        "table": {
-            "dragon-wild": {
-                "title": "Dragon Wild",
-                "description": "Paid if the Dragon side wins, and also the value of the Dragon card and the Wild card are the same"
-            },
-            "tiger-wild": {
-                "title": "Tiger Wild",
-                "description": "Paid if the Tiger side wins, and also the value of the The Tiger card and the Wild card are the same"
-            },
-            "super-wild": {
-                "title": "Super Wild",
-                "description": "Paid if the value of Dragon, Tiger, and Wild cards are the same"
-            },
-            "dragon-pair": {
-                "title": "Dragon Pair",
-                "description": "Paid if the value of the Dragon Card and the Wild Card are the same"
-            },
-            "tiger-pair": {
-                "title": "Tiger Pair",
-                "description": "Paid if the value of the Tiger Card and the Wild Card are the same"
+        },
+        "side-bet": {
+            "title": "Side Bets",
+            "examples": "Example",
+            "description": "Deskripsi",
+            "table": {
+                "dragon-wild": {
+                    "title": "Dragon Wild",
+                    "description": "Paid if the Dragon side wins, and also the value of the Dragon card and the Wild card are the same"
+                },
+                "tiger-wild": {
+                    "title": "Tiger Wild",
+                    "description": "Paid if the Tiger side wins, and also the value of the The Tiger card and the Wild card are the same"
+                },
+                "super-wild": {
+                    "title": "Super Wild",
+                    "description": "Paid if the value of Dragon, Tiger, and Wild cards are the same"
+                },
+                "dragon-pair": {
+                    "title": "Dragon Pair",
+                    "description": "Paid if the value of the Dragon Card and the Wild Card are the same"
+                },
+                "tiger-pair": {
+                    "title": "Tiger Pair",
+                    "description": "Paid if the value of the Tiger Card and the Wild Card are the same"
+                }
             }
         }
     },
