--- a/src/locales/id/htp.json
+++ b/src/locales/id/htp.json
@@ -48,49 +48,54 @@
             "content": "Taruhan Pair Harimau pada dasarnya adalah taruhan Pair biasa, jadi apabila Nilai kartu Harimau dan nilai kartu wild sama, maka anda akan memenangkan taruhan ini."
         }
     },
-    "main-bet": {
-        "title": "TARUHAN UTAMA",
-        "examples": "Contoh",
+    "bet-description-and-example": {
+        "title": "Deskripsi Taruhan dan Contoh",
         "description": "Deskripsi",
-        "table": {
-            "dragon": {
-                "title": "Naga",
-                "description": "Dibayar jika nilai Naga lebih besar dari nilai Harimau"
-            },
-            "tiger": {
-                "title": "Harimau",
-                "description": "Dibayar jika nilai Harimau lebih besar dari nilai Naga"
-            },
-            "tie": {
-                "title": "Tie",
-                "description": "Dibayar jika kartu Naga dan Harimau punya nilai yang sama"
+        "examples": "Contoh",
+        "main-bet": {
+            "title": "TARUHAN UTAMA",
+            "examples": "Contoh",
+            "description": "Deskripsi",
+            "table": {
+                "dragon": {
+                    "title": "Naga",
+                    "description": "Dibayar jika nilai Naga lebih besar dari nilai Harimau"
+                },
+                "tiger": {
+                    "title": "Harimau",
+                    "description": "Dibayar jika nilai Harimau lebih besar dari nilai Naga"
+                },
+                "tie": {
+                    "title": "Tie",
+                    "description": "Dibayar jika kartu Naga dan Harimau punya nilai yang sama"
+                }
             }
-        }
-    },
-    "side-bet": {
-        "title": "TARUHAN SAMPINGAN",
-        "examples": "Contoh",
-        "description": "Deskripsi",
-        "table": {
-            "dragon-wild": {
-                "title": "Naga Wild",
-                "description": "Dibayar jika Pihak Naga menang dan juga nilai kartu Naga dan kartu Wild sama"
-            },
-            "tiger-wild": {
-                "title": "Harimau Wild",
-                "description": "Dibayar jika Pihak Harimau menang dan juga nilai kartu Harimau dan kartu Wild sama"
-            },
-            "super-wild": {
-                "title": "Super Wild",
-                "description": "Dibayar jika nilai kartu Naga, Harimau dan Wild sama"
-            },
-            "dragon-pair": {
-                "title": "Pair Naga",
-                "description": "Dibayar jika nilai Kartu Naga dan kartu Wild sama"
-            },
-            "tiger-pair": {
-                "title": "Pair Harimau",
-                "description": "Dibayar jika nilai Kartu Harimau dan kartu Wild sama"
+        },
+        "side-bet": {
+            "title": "TARUHAN SAMPINGAN",
+            "examples": "Contoh",
+            "description": "Deskripsi",
+            "table": {
+                "dragon-wild": {
+                    "title": "Naga Wild",
+                    "description": "Dibayar jika Pihak Naga menang dan juga nilai kartu Naga dan kartu Wild sama"
+                },
+                "tiger-wild": {
+                    "title": "Harimau Wild",
+                    "description": "Dibayar jika Pihak Harimau menang dan juga nilai kartu Harimau dan kartu Wild sama"
+                },
+                "super-wild": {
+                    "title": "Super Wild",
+                    "description": "Dibayar jika nilai kartu Naga, Harimau dan Wild sama"
+                },
+                "dragon-pair": {
+                    "title": "Pair Naga",
+                    "description": "Dibayar jika nilai Kartu Naga dan kartu Wild sama"
+                },
+                "tiger-pair": {
+                    "title": "Pair Harimau",
+                    "description": "Dibayar jika nilai Kartu Harimau dan kartu Wild sama"
+                }
             }
         }
     },
